--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <a-assets>
                 <video
                     id="vid"
-                    src="assets/asset.mp4"
+                    src="assets/VID_20211128_215043.mp4"
                     preload="auto"
                     response-type="arraybuffer"
                     loop
